# fullstack_auction

./: run.sh  stop.sh  test
server/: .env  .gitignore  Dockerfile  alembic.ini  celerybeat-schedule  dev.env  info.txt  prod.env  pyproject.toml  pytest.ini  r.txt  setup.cfg
server/alembic/: env.py
server/alembic/versions/: 01377175fdad_.py  0496a21dcd3a_.py  09141a3641c1_.py  134ca82d4a2e_.py  13dc8ea3bcbf_.py  27fc0a1bd768_.py  308d3d410cc9_.py  31fc6d0c900c_.py  33f0c9a4f7e5_.py  4d830eea97dc_.py  503cfde75fbb_.py  556ed4bf4fe6_.py  69c65c6e1f23_.py  6db09ec4c050_.py  700a69b6dea6_.py  7211b8e54e45_.py  7ee186985859_.py  815ba758af91_.py  821dca662a0c_.py  8a873103e178_.py  963beb28223a_.py  a960c90fd6e5_.py  ac1739cbc3ac_.py  ba8939d15a96_.py  db1ecce8cc96_.py  e0935eb946cd_.py  e0cbb1a3ab77_.py  e39dd16c49f2_.py  e8e7cdf0a2a0_.py  f3f96b0199fd_.py  f5969c1e0883_.py
server/scripts/: migrate.sh  run_redis.sh  test.sh
server/src/: celery_.py  client.py  config.py  database.py  exception.py  mail_client.py  main.py  redis_client.py  utils.py
server/src/auction/: auction_getters.py  exception.py  models.py  resizer_service.py  router.py  schemas.py  service.py  tasks.py  utils.py  validators.py  yandex_cloud_service.py
server/src/auth/: models.py  router.py  schemas.py  security.py  service.py  user_getters.py  validators.py
server/src/settings/: base.py  database.py
server/src/user/: exception.py  google_service.py  mail_service.py  mobile_service.py  models.py  router.py  schemas.py  security.py  service.py  tasks.py  utils.py  (+2 more)
server/tests/: conftest.py
(+384 files in other folders)
